# gnertrain

./: .clang_complete  .gitignore  .gitmodules  Makefile.in  README.md  compile_commands.json  configure.ac  entities.h  gnertrain.c  gnertrain.conf  gnertrain.ini  menu.h  strsplit.h
src/: compile_commands.json  gnerdtrain.c  gnerdtrain.h
